<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="upv.welcomeincoming.app.TranslateActivity"
    tools:ignore="MergeRootFrame" >
    <ScrollView android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSay"
        android:id="@+id/idSay"
        android:onClick="openSpeech"
        android:layout_gravity="left|top" />
   </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ShowTranslate"
        android:layout_gravity="left|center_vertical" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnListen"
        android:id="@+id/idListen"
        android:onClick="gotoSpeak"
        android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_1"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_1"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_1_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_1_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_1"
            android:onClick="gotoSpeak_txt_1"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_2"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_2_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_2_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_2"
            android:onClick="gotoSpeak_txt_2"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_3"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_3"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_3_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_3_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_3"
            android:onClick="gotoSpeak_txt_3"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_4"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_4"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_4_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_4_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_4"
            android:onClick="gotoSpeak_txt_4"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_5"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_5_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_5_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_5"
            android:onClick="gotoSpeak_txt_5"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_6"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_6"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_6_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_6_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_6"
            android:onClick="gotoSpeak_txt_6"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_7"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_7"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_7_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_7_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_7"
            android:onClick="gotoSpeak_txt_7"
            android:layout_gravity="left|bottom" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_8"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_8"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/idTxt_8_en"
            android:layout_gravity="left|center_vertical"
            android:text="@string/txt_8_en"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnListen"
            android:id="@+id/idListen_8"
            android:onClick="gotoSpeak_txt_8"
            android:layout_gravity="left|bottom" />
    </TableRow>
</TableLayout>
        </LinearLayout>
</ScrollView>

</FrameLayout>
